--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
         <li><a href="https://github.com/Uberdanalmeida">Acesso ao meu GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/">Acesso ao meu linkedin</a></li>
-        <li><a href="https://uberdanalmeida.github.io/projeto-nlw/">Ver meu portfólio</a></li>
+        <li><a href="https://uberdanalmeida.github.io/spacetime">Ver meu portfólio</a></li>
         <li><a href="https://www.rocketseat.com.br/explorer">Conheça o explorer</a></li>
     </ul>
     
