Criando uma pasta para as imagens.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
     <div id="profile">
-        <img src="foto uber.jpg" alt="foto do perfil Uberdan" height="150px">
+        <img src="imagens/foto uber.jpg" alt="foto do perfil Uberdan" height="150px">
         <p>Uberdan Almeida</p>
     </div>
 
