Adicionando o rel="noopener" nos links.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" rel="noopener">
            <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
