Adicionando ao restante dos links.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <ul>
         <li><a href="https://github.com/Uberdanalmeida">Acesso ao meu GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/">Acesso ao meu linkedin</a></li>
-        <li><a href="https://uberdanalmeida.github.io/spacetime">Ver meu portfólio</a></li>
-        <li><a href="https://www.rocketseat.com.br/explorer">Conheça o explorer</a></li>
+        <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/" target="_blank" rel="noopener">Acesso ao meu linkedin</a></li>
+        <li><a href="https://uberdanalmeida.github.io/spacetime" target="_blank" rel="noopener">Ver meu portfólio</a></li>
+        <li><a href="https://www.rocketseat.com.br/explorer" target="_blank" rel="noopener">Conheça o explorer</a></li>
     </ul>
     
     <div id="social">
-        <a href="https://github.com/Uberdanalmeida" target="_blank">
+        <a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener">
            <ion-icon name="logo-github"></ion-icon>
         </a>
 
