--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <ul>
-        <li><a href="https://github.com/Uberdanalmeida">Acesso ao meu GitHub</a></li>
+        <li><a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener">Acesso ao meu GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/" target="_blank" rel="noopener">Acesso ao meu linkedin</a></li>
         <li><a href="https://uberdanalmeida.github.io/spacetime" target="_blank" rel="noopener">Ver meu portfólio</a></li>
         <li><a href="https://www.rocketseat.com.br/explorer" target="_blank" rel="noopener">Conheça o explorer</a></li>
