Adicionando o atributo "noreferrer" no final do atributo rel="noopener", para aumentar a segurança do site.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     </div>
 
     <ul>
-        <li><a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener">Acesso ao meu GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/" target="_blank" rel="noopener">Acesso ao meu linkedin</a></li>
-        <li><a href="https://uberdanalmeida.github.io/spacetime" target="_blank" rel="noopener">Ver meu portfólio</a></li>
-        <li><a href="https://www.rocketseat.com.br/explorer" target="_blank" rel="noopener">Conheça o explorer</a></li>
+        <li><a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener noreferrer">Acesso ao meu GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/uberdan-almeida-8a1a08223/" target="_blank" rel="noopener noreferrer">Acesso ao meu linkedin</a></li>
+        <li><a href="https://uberdanalmeida.github.io/spacetime" target="_blank" rel="noopener noreferrer">Ver meu portfólio</a></li>
+        <li><a href="https://www.rocketseat.com.br/explorer" target="_blank" rel="noopener noreferrer">Conheça o explorer</a></li>
     </ul>
     
     <div id="social">
-        <a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener">
+        <a href="https://github.com/Uberdanalmeida" target="_blank" rel="noopener noreferrer">
            <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="#" target="_blank" rel="noopener">
+        <a href="#" target="_blank" rel="noopener noreferrer">
            <ion-icon name="logo-linkedin"></ion-icon>
         </a>
     </div>
